plugins/Live/stylesheets/live.less
#visitsLive {
    text-align: left;
    color: @theme-color-text-light;
    border-top: 1px solid @color-silver-l90;

   .dataTable {
     margin-bottom: -1px;
   }
}

.theWidgetContent > h2:first-child {
  color: @theme-color-headline-alternative !important;
  .title {
    color: @theme-color-headline-alternative !important;
  }
}

#visitsLive .settings {
  border-bottom: 1px solid @color-silver-l90;
}

#visitsLive .datetime, #visitsLive .country, #visitsLive .settings, #visitsLive .returning {
    padding: 10px 5px 10px 12px;
}

#visitsLive .datetime {
    background: @theme-color-background-base;
    border-top: 1px solid #d3d1c5;
    margin: 0;
    line-height: 20px;
    text-align: left;
}

#visitsLive .country {
    background: @theme-color-background-base url(plugins/CoreHome/images/bullet1.png) no-repeat scroll 0 0;
}

#visitsLive .referrer {
  display: block;
  padding-top: 4px;
  padding-bottom: 1px;
}

#visitsLive .pagesTitle {
    display: block;
    float: left;
}

#visitsLive .settings {
    background: @theme-color-widget-background none repeat scroll 0 0;
}

#visitsLive .settings a {
    text-decoration: none;
}

#visitsLive .returning {
    background: #F9FAFA none repeat scroll 0 0;
}

#visitsLive .visits-live-launch-visitor-profile {
  color: @theme-color-text;
  line-height: 200%;

  span {
    display: block;
    vertical-align: middle;

    &.icon-visitor-profile {
      display: inline;
    }
  }

  .icon-visitor-profile {
    font-size: 120%;
  }
}

.visitsLiveFooter img {
    vertical-align: middle;
}

.visitsLiveFooter {
    line-height: 2.5em;
}

.dataTableVizVisitorLog table img {
    margin: 0 3px 0 0;
}

.ui-dialog.ui-widget {
  .dataTableVizVisitorLog {
    .dataTableFeatures {
      border-bottom: 0;
    }
  }
}

.visitsLiveFooter a.rightLink {
    float: right;
    padding-right: 20px;
}

#visitsLive .datetime a {
    text-decoration: none;
}

ol.visitorLog {
  counter-reset: item;
  list-style-type: none;
}

.truncated-text-line {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    display:inline-block;
    max-width:90%;
    overflow: -moz-hidden-unscrollable;
}

ol.visitorLog > li {
    margin-bottom: 7px;
    line-height: 20px;

  &:before {
    content: counter(item) " ";
    counter-increment: item;
    padding-right: 5px;
    vertical-align: top;
  }

  &.duplicate {
    visibility: hidden;
    height: 0;
    margin: 0;
    overflow: hidden;
    padding: 0;
  }

  &.more {
      list-style-type: none;
      font-weight: bold;

      .icon-info {
        vertical-align: middle;
      }
  }
}

#visitsLive img {
    vertical-align: middle;
}

.visitorRank img {
    vertical-align: text-bottom;
}

.iconPadding {
    margin-left: 4px;
    margin-right: 4px;
}

.visitorReferrer .visitorRank {
    display: inline-block;
}

.visitorRank {
    border: 1px solid #D8D8D8;
    color: #474747;
    border-radius: 3px;
    padding: 3px 5px;
}

#visitsLive .visitorRank {
    padding: 2px;
    border: none;
    margin-left: 5px;
}

#visitsLive .visitorType .visitorRank {
  margin-left: 0;
}

.hash {
    color: #BBB;
    font-size: 9pt;
    margin-right: 2px;
}

.repeat {
    font-weight: bold;
    display: block;
    margin: 5px 5px 5px 0;
    float: left;

    &.icon-refresh:before {
      padding-right: 2px;
    }
}

.dataTableVizVisitorLog hr {
    background: none repeat scroll 0 0 transparent;
    border: 0 none #000;
    border-bottom: 1px solid #ccc;
    color: #eee;
    margin: 0 2em 0.5em;
    padding: 0 0 0.5em;
}

.simple-realtime-visitor-widget {
    text-align: center;
}

.simple-realtime-visitor-counter {
    background-color: #F1F0EB;
    border-radius: 10px;
    display: inline-block;
    margin: 2em 0 1em 0;
    padding: 3em;
}

.simple-realtime-visitor-counter > div {
    font-size: 4.0em;
    color: @theme-color-text-light;
}

.simple-realtime-metric {
    font-weight: bold;
    color: #333;
}

.simple-realtime-elaboration {
    margin: 1em 2em 1em 2em;
    color: @theme-color-text-lighter;
    display: inline-block;
}

ol.visitorLog p {
    margin:0;
    padding:0;
}

.dataTableVizVisitorLog {

  .card {
    padding: 15px 0;
    font-size: 13px;
    text-align: left;

    a {
      text-decoration: none !important;
      color: @theme-color-link;
      width: inherit;
    }
  }

  .visitorLog > li > div {
    width: 95%;
  }

  .dataTableWrapper {
     width:100%;
  }

  .widget & .card {

    &:hover .visitor-log-visitor-profile-link {
      display:inline;
    }
  }
}

.visitor-log-datetime {
  display: block;
}

.visitor-log-ip-location img.flag {
  border: 1px solid lightgray;
  top: 2px;
  position: relative;
}

.visitor-log-page-list {
  position:relative;
  margin-top: 7px;
}

a.visitor-log-visitor-profile-link {
    z-index: 2;
    position:absolute;
    right: 15px;
    top: 15px;
    font-style:italic;
    font-size:13px;
    background-color: inherit !important;

    .widget & {
        display:none;
    }

    img {
        margin-top: -2px;
        margin-bottom: -3px;
    }

    @media print {
      display: none;
    }
}

.visitorLog {
    > li > div {
      display: inline-block;
      width: 90%;

      > * {
        vertical-align: top;
      }
    }
}

.action-list-action-icon {
    display: inline;
    margin: 2px 3px 0 0;
    max-height: 16px;

    &.outlink {
      margin: 7px 3px 0 0;
    }
}

.action-list-url {
    display: inline-block;
}

.visitorLogIcons {
    position: relative;
    display: block;
}

.visitorLogIconWithDetails .details {
    display: none;
}

.visitorLogIcons>span>span>img {
    margin: auto 5px auto 0;
}

.visitorLogIconWithDetails>img {
    margin: auto 5px -2px 0;
    height: 16px;
}

.visitorLogIconWithDetails.flag {
  display: none;
}

.visitorLogIconWithDetails.flag>img {
    border: 1px solid lightgray;
}

.visitorLogIcons>span.visitorRank>img {
    margin: auto 0;
}

.visitorLogIcons {
  .visitorDetails, .visitorType {
    display: block;
    margin-top: 4px;
  }
}

.own-visitor-column {
  .visitorLogIcons {
    .visitorDetails {
      margin-top: 0;
    }
    .visitorType {
      margin-top: 8px;
    }
  }
}

.visitorReferrer {
    clear:both;
    padding-top: 1em;

    * {
      vertical-align: middle;
    }
}

.segmentedlog {
  margin: 8px;
  display: block;
  background: transparent url('plugins/Live/images/visitorlog.png') no-repeat 0 0;
  padding-left: 25px;
}
.segmentedlog:hover {
  background-image: url('plugins/Live/images/visitorlog-hover.png');
}

#widgetLivewidget {
  .visitorLogIcons {
    display: inline;
  }

  .visitorLogIconWithDetails.flag {
    display: inline;
  }

  .visitorDetails {
    display: inline-block;
  }

  .visitorLogIconWithDetails {
    margin-right: 5px;
  }

  .visitorType {
    display: inline-block;
    float: left;
    margin-right: 15px;
  }
}

@media only screen and (max-width: 600px) {
  .own-visitor-column {
    margin: 10px 0;
  }
}

@media print{
  .col.s12.m3{
    width: 20%;
  }

  .row .col.s12.own-visitor-column{
    width: 15%;
    margin-top: 10px;
    margin-bottom: 10px;
  }

  .col.s12.m7.column {
    width:65%;
  }
}

